# pv-monitoring-platform

./: .gitignore  AI_UX_FLOWS.md  BUG_TRACKER.md  CLAUDE.md  PV_monitoring_slides.pptx  README.md  docker-compose.yml  package-lock.json  sonar-project.properties
.github/workflows/: ci.yml
agents/: design-review-agent.md
ai/: .dockerignore  .env.example  Dockerfile  README.md  config.py  database.py  error_codes.py  http_api.py  logging_config.py  pyproject.toml  server.py
ai/models/: __init__.py  context.py  enums.py  requests.py  responses.py
ai/queries/: __init__.py  builders.py
ai/tests/: __init__.py  conftest.py  test_context.py  test_server.py
ai/tools/: __init__.py  comparison.py  diagnostics.py  discovery.py  financial.py  fleet.py  forecasting.py  health.py  monitoring.py  performance.py
backend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
backend/scripts/: simulate-flow.ts
backend/src/: app.module.ts  main.ts
backend/test/: ingestion.e2e-spec.ts
diagrams/markdown/: agent-behavior.md  ai-chat-flow.md  ai-tools.md  architecture-overview.md  data-flow.md  database-schema.md  docker-deployment.md  flow-financial-report.md  flow-health-check.md  flow-morning-briefing.md  flow-performance-audit.md  (+11 more)
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
k8s/: ai-service.yaml  backend.yaml  frontend.yaml  ingress.yaml  postgres.yaml  secrets.example.yaml
presentation/: PV_monitoring_slides.pptx  demo.md  presentation.md  slides.md
(+201 files in other folders)
