[project]
name = "solar-analyst"
version = "0.1.0"
description = "Solar Analytics AI Service - FastMCP Server for PV monitoring data analysis"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
    "dirty-equals>=0.11",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"
